[gd_scene load_steps=2 format=3 uid="uid://dodi5xmqua06d"]

[ext_resource type="Script" uid="uid://bv0n7f6ppc6in" path="res://jeux/palet_breton/scripts/hud_lancer.gd" id="1_hud"]

[node name="HudLancer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hud")

[node name="MiniMap" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 220.0
grow_horizontal = 0
stretch = true

[node name="SubViewport" type="SubViewport" parent="MiniMap"]
handle_input_locally = false
size = Vector2i(200, 200)
render_target_update_mode = 4

[node name="CameraMiniMap" type="Camera3D" parent="MiniMap/SubViewport"]
transform = Transform3D(-4.371139e-08, -1, -4.371139e-08, 0, -4.371139e-08, 1, -1, 4.371139e-08, 1.9106855e-15, -1.5, 0.8, 0)
current = true
fov = 60.7
far = 2.0

[node name="PanelMiniMap" type="Panel" parent="MiniMap"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="LabelInstructions" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Maintenez ESPACE pour charger la puissance"
horizontal_alignment = 1

[node name="LabelForce" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Puissance: 0%"
horizontal_alignment = 1

[node name="BarreForce" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(380, 30)
layout_mode = 2
show_percentage = false
