extends Control
class_name HudLancer

## R√©f√©rences aux √©l√©ments UI
@onready var barre_force: ProgressBar = $PanelContainer/VBoxContainer/BarreForce
@onready var label_instructions: Label = $PanelContainer/VBoxContainer/LabelInstructions
@onready var mini_map: SubViewportContainer = $MiniMap
@onready var sub_viewport: SubViewport = $MiniMap/SubViewport
@onready var reticule: Control = $Reticule
@onready var label_message: Label = $LabelMessage

## Joueur 1
@onready var label_score_j1: Label = $InfoJoueur1/MarginContainer/VBox/HBoxScore/LabelScoreJ1
@onready var palet1_j1: ColorRect = $InfoJoueur1/MarginContainer/VBox/HBoxPalets/PaletsRestants/Palet1J1
@onready var palet2_j1: ColorRect = $InfoJoueur1/MarginContainer/VBox/HBoxPalets/PaletsRestants/Palet2J1
@onready var palet3_j1: ColorRect = $InfoJoueur1/MarginContainer/VBox/HBoxPalets/PaletsRestants/Palet3J1
@onready var palet4_j1: ColorRect = $InfoJoueur1/MarginContainer/VBox/HBoxPalets/PaletsRestants/Palet4J1
@onready var icone_j1: ColorRect = $InfoJoueur1/MarginContainer/VBox/HBoxNom/IconeJoueur1

## Joueur 2
@onready var label_score_j2: Label = $InfoJoueur2/MarginContainer/VBox/HBoxScore/LabelScoreJ2
@onready var palet1_j2: ColorRect = $InfoJoueur2/MarginContainer/VBox/HBoxPalets/PaletsRestants/Palet1J2
@onready var palet2_j2: ColorRect = $InfoJoueur2/MarginContainer/VBox/HBoxPalets/PaletsRestants/Palet2J2
@onready var palet3_j2: ColorRect = $InfoJoueur2/MarginContainer/VBox/HBoxPalets/PaletsRestants/Palet3J2
@onready var palet4_j2: ColorRect = $InfoJoueur2/MarginContainer/VBox/HBoxPalets/PaletsRestants/Palet4J2
@onready var icone_j2: ColorRect = $InfoJoueur2/MarginContainer/VBox/HBoxNom/IconeJoueur2

var palets_j1: Array[ColorRect] = []
var palets_j2: Array[ColorRect] = []

func _ready() -> void:
	# Configurer la barre de progression
	barre_force.min_value = 0
	barre_force.max_value = 100
	barre_force.value = 0
	barre_force.show_percentage = false
	
	# Initialiser les tableaux de palets
	palets_j1 = [palet1_j1, palet2_j1, palet3_j1, palet4_j1]
	palets_j2 = [palet1_j2, palet2_j2, palet3_j2, palet4_j2]
	
	# Afficher le HUD pour tester
	visible = true
	
	print("HUD initialis√© - Mini-map active")

func afficher_visee() -> void:
	visible = true
	mini_map.visible = true
	reticule.visible = true
	barre_force.value = 0
	barre_force.modulate = Color.GREEN
	label_instructions.text = "Souris pour viser | ESPACE pour lancer"

func masquer() -> void:
	# Ne masquer que les √©l√©ments de vis√©e, pas tout le HUD
	# La mini-map et les infos joueurs restent visibles
	reticule.visible = false
	barre_force.value = 0
	barre_force.modulate = Color.GREEN
	label_instructions.text = ""

func mettre_a_jour_force(pourcentage: float) -> void:
	barre_force.value = pourcentage
	
	# Changer la couleur selon la force
	if pourcentage < 33:
		barre_force.modulate = Color.GREEN
	elif pourcentage < 66:
		barre_force.modulate = Color.YELLOW
	else:
		barre_force.modulate = Color.RED

func mettre_a_jour_reticule(angle_horizontal: float, angle_vertical: float) -> void:
	# D√©place le r√©ticule en fonction des angles de vis√©e
	# Calculer le d√©placement du r√©ticule
	# angle_horizontal : -30 √† +30 degr√©s
	# angle_vertical : 5 √† 45 degr√©s
	
	var viewport_size = get_viewport_rect().size
	var center_x = viewport_size.x / 2
	var center_y = viewport_size.y / 2
	
	# D√©placement horizontal : 3 pixels par degr√©
	var deplacement_x = angle_horizontal * 3.0
	
	# D√©placement vertical : -2 pixels par degr√© (vers le haut quand angle augmente)
	# On centre sur 25¬∞ (milieu entre 5 et 45)
	var angle_vertical_centre = 25.0
	var deplacement_y = -(angle_vertical - angle_vertical_centre) * 2.0
	
	reticule.position.x = center_x + deplacement_x
	reticule.position.y = center_y + deplacement_y

func mettre_a_jour_joueur(numero_joueur: int, palets_restants: int, _palets_total: int) -> void:
	"""Met √† jour l'affichage du joueur actuel et ses palets"""
	# Mettre en √©vidence le joueur actif
	if numero_joueur == 1:
		icone_j1.modulate = Color(1, 1, 1, 1)  # Pleine luminosit√©
		icone_j2.modulate = Color(1, 1, 1, 0.3)  # Att√©nu√©
	else:
		icone_j1.modulate = Color(1, 1, 1, 0.3)  # Att√©nu√©
		icone_j2.modulate = Color(1, 1, 1, 1)  # Pleine luminosit√©
	
	# Afficher les palets restants visuellement
	var palets_array = palets_j1 if numero_joueur == 1 else palets_j2
	for i in range(4):
		if i < palets_restants:
			palets_array[i].modulate = Color(1, 1, 1, 1)  # Visible
		else:
			palets_array[i].modulate = Color(1, 1, 1, 0.2)  # Gris√©/utilis√©

func mettre_a_jour_scores(score1: int, score2: int) -> void:
	"""Met √† jour l'affichage des scores"""
	label_score_j1.text = str(score1)
	label_score_j2.text = str(score2)

func afficher_message(message: String, duree: float = 3.0) -> void:
	#Affiche un message temporaire au centre de l'√©cran
	label_message.text = message
	label_message.visible = true
	
	# Cr√©er un timer pour masquer le message
	await get_tree().create_timer(duree).timeout
	label_message.visible = false
	label_message.text = ""

func afficher_fin_manche(score1: int, score2: int, gagnant: int, points: int) -> void:
	#Affiche le r√©sultat de la manche sur le HUD
	var msg = "=== FIN DE MANCHE ===\n"
	msg += "Score Joueur 1: %d\nScore Joueur 2: %d\n" % [score1, score2]
	if gagnant == 0:
		msg += "√âgalit√© - aucun point marqu√©"
	elif gagnant == 1:
		msg += "Joueur 1 (üîµ) gagne %d point%s !" % [points, ("s" if points > 1 else "")]
	else:
		msg += "Joueur 2 (üî¥) gagne %d point%s !" % [points, ("s" if points > 1 else "")]
	label_message.text = msg
	label_message.visible = true
	await get_tree().create_timer(4.0).timeout
	label_message.visible = false
	label_message.text = ""

func afficher_fin_partie(score1: int, score2: int) -> void:
	# Affiche la fin de partie sur le HUD
	var msg = "=== FIN DE PARTIE ===\n"
	msg += "Score final :\nJoueur 1 (üîµ) : %d\nJoueur 2 (üî¥) : %d\n" % [score1, score2]
	if score1 > score2:
		msg += "Victoire Joueur 1 !"
	elif score2 > score1:
		msg += "Victoire Joueur 2 !"
	else:
		msg += "Match nul !"
	label_message.text = msg
	label_message.visible = true
	await get_tree().create_timer(6.0).timeout
	label_message.visible = false
	label_message.text = ""
